--- a/index.html
+++ b/index.html
@@ -1,125 +1,129 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
-        <title>Secours des Animaux en Détresse</title>
-    </head>
-    <body>
-        <header>
-            <div class="container-fluid header-container">
-                <div class="row justify-content-sm-between header ">
-                    <div class="col d-flex justify-content-start title">
-                        <a href="#"><h1 class="h6">Secours des Animaux en Détresse</h1></a>
-                    </div>
-                    <div class="col col-sm-2 d-flex justify-content-end menu">
-                        <form class="d-flex search-menu">
-                            <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
-                            <button class="search-button" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+
+<head>
+    <meta charset="UTF-8">
+    <meta type="description" content="Associations de secours des animaux, lutte pour le bien être animal et contre maltraitance">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Secours des Animaux en Détresse</title>
+</head>
+
+<body>
+    <header>
+        <div class="container-fluid header-container">
+            <div class="row justify-content-sm-between header ">
+                <div class="col d-flex justify-content-start title">
+                    <a href="#">
+                        <h1 class="h6">Secours des Animaux en Détresse</h1>
+                    </a>
+                </div>
+                <div class="col col-sm-2 d-flex justify-content-end menu">
+                    <form class="d-flex search-menu">
+                        <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
+                        <button class="search-button" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
                                 <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/></svg>
                             </button>
-                        </form>
-                        <div class="navig">
-                            <ul>
-                                <li><a href="index.html">Accueil</a></li>
-                                <li><a href="#">Galerie</a></li>
-                                <li><a href="event.html">Evenements</a></li>
-                                <li><a href="#">contact</a></li>
-                            </ul>
-                        </div>
+                    </form>
+                    <div class="navig">
+                        <ul>
+                            <li><a href="index.html">Accueil</a></li>
+                            <li><a href="#">Galerie</a></li>
+                            <li><a href="event.html">Evenements</a></li>
+                            <li><a href="#">contact</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </header>
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">Accueil</li>
-            </ol>
-        </nav>
-        <main>
-            <div class="container-fluid main">
-                <div class="row discovery">
-                    <div class="col discover-us">
-                        <article>
-                            <h2>Bienvenue au secours des animaux en détresse !</h2>
-                            <img src="../Project-1/Images/12-les-chaton-720px.jpg">
-                        </article>
-                    </div>
+        </div>
+    </header>
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">Accueil</li>
+        </ol>
+    </nav>
+    <main>
+        <div class="container-fluid main">
+            <div class="row discovery">
+                <div class="col discover-us">
+                    <article>
+                        <h2>Bienvenue au secours des animaux en détresse !</h2>
+                        <img src="../Project-1/Images/12-les-chaton-720px.jpg">
+                    </article>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <article class="give-donation">
-                            <div class="img-cat">
-                                <img
-                                src="Images/chaton-rencontre-chat.jpeg" 
-                                alt="Deux chatons gris"/>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <article class="give-donation">
+                        <div class="img-cat">
+                            <img src="Images/chaton-rencontre-chat.jpeg" alt="Deux chatons gris" />
+                        </div>
+                        <div class="donation-text">
+                            <h2 class="h5">Soutenez-nous !</h2>
+                            <div class="icon-cat">
+                                <img src="../Project-1/Images/cat-pet-cartoon.png" alt="dessin de chat">
                             </div>
-                            <div class="donation-text">
-                                <h2 class="h5">Soutenez-nous !</h2>
-                                <div class="icon-cat">
-                                    <img src="../Project-1/Images/cat-pet-cartoon.png" alt="dessin de chat">
-                                </div>
-                                <div class="content-donation">
-                                    <p>Vous souhaitez faire un <strong>don</strong> ? <br>Rendez-vous ici<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
+                            <div class="content-donation">
+                                <p>Vous souhaitez faire un <strong>don</strong> ? <br>Rendez-vous ici<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
                                         fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
                                         0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>;
                                     </svg></a></p>
-                                    <p>Vous souhaitez <strong>rejoindre</strong> l'une de nos équipes ? <br>C'est par là !<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
+                                <p>Vous souhaitez <strong>rejoindre</strong> l'une de nos équipes ? <br>C'est par là !<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
                                         fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
                                         0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>
                                     </svg></a></p>
-                                </div>
                             </div>
-                        </article>
-                    </div>
+                        </div>
+                    </article>
                 </div>
-                <div class="border-separator-2"></div>
-                <div class="row">
-                    <div class="col">
-                        <article class="who-we-are">
-                            <h2 class="h5">Qui sommes-nous ?</h2>
-                            <div class="icon-dog">
-                                <img src="../Project-1/Images/Illustration_sans_titre(1).png" alt="dessin de chien">
-                            </div>
-                            <p>Le secours des animaux en détresse (SAD) est, historiquement en France, la première des sociétés de protection des animaux, 
-                            qui œuvre dans le domaine de la protection animale [...]<div class="suite-1"><a href="#"><i>Lire la suite</i></a></div></p>
-                        </article>
-                    </div>
+            </div>
+            <div class="border-separator-2"></div>
+            <div class="row">
+                <div class="col">
+                    <article class="who-we-are">
+                        <h2 class="h5">Qui sommes-nous ?</h2>
+                        <div class="icon-dog">
+                            <img src="../Project-1/Images/Illustration_sans_titre(1).png" alt="dessin de chien">
+                        </div>
+                        <p>Le secours des animaux en détresse (SAD) est, historiquement en France, la première des sociétés de protection des animaux, qui œuvre dans le domaine de la protection animale [...]
+                            <div class="suite-1"><a href="#"><i>Lire la suite</i></a></div>
+                        </p>
+                    </article>
                 </div>
-                <div class="border-separator-2"></div>
-                <div class="row event-row">
-                    <div class="col event-col">
-                        <article class="event">
-                            <h2 class="h5"><a href="#">Je participe !</a></h2>
-                            <p><strong>Spectacles, conférérences, débats, marathons, tombolas</strong>...<br>retrouvez-nous partout en France</p>
-                            <img src="../Project-1/Images/cover-r4x3w1000-5ef9cf64b2914-dog-813103-1920.jpg">
-                        </article>
-                    </div>
+            </div>
+            <div class="border-separator-2"></div>
+            <div class="row event-row">
+                <div class="col event-col">
+                    <article class="event">
+                        <h2 class="h5"><a href="#">Je participe !</a></h2>
+                        <p><strong>Spectacles, conférérences, débats, marathons, tombolas</strong>...<br>retrouvez-nous partout en France</p>
+                        <img src="../Project-1/Images/cover-r4x3w1000-5ef9cf64b2914-dog-813103-1920.jpg">
+                    </article>
                 </div>
-                <div class="border-separator-2"></div>
-                <div class="row">
-                    <div class="col newsletter">
-                        <h3 class="h5">Inscrivez-vous à notre newsletter</h3>
-                        <input type="email" placeholder="e-mail">
-                        <a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
+            </div>
+            <div class="border-separator-2"></div>
+            <div class="row">
+                <div class="col newsletter">
+                    <h3 class="h5">Inscrivez-vous à notre newsletter</h3>
+                    <input type="email" placeholder="e-mail">
+                    <a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
                             fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
                             0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>;
                         </svg></a>
-                    </div>
                 </div>
             </div>
-        </main>
-        <div class="border-separator-2"></div>
-        <footer>
-            <div class="container-fluid footer-1">
-                <div class="row justify-content-between row-footer-1">
-                    <div class="col">
+        </div>
+    </main>
+    <div class="border-separator-2"></div>
+    <footer>
+        <div class="container-fluid footer-1">
+            <div class="row justify-content-between row-footer-1">
+                <div class="col">
                     <div class="social">
                         <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 
@@ -137,46 +141,47 @@
                     </div>
                 </div>
             </div>
-                <div class="row row-footer-2">
-                    <div class="col footer">
-                        <div class="foot-page">
-                            <ul class="mention">
-                                <li><a href="#">Mentions légales</a></li>
-                                <span class="separator">|</span>
-                                <li><a href="#">Plan du site</a></li>
-                                <span class="separator">|</span>
-                                <li><a href="#">Presse</a></li>
-                                <span class="separator">|</span>
-                                <li><a href="#">Appels d'offres</a></li>
-                                <span class="separator">|</span>
-                                <li><a href="#">Actions</a></li>
-                                <span class="separator">|</span>
-                                <li><a href="#">Contacts</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid footer-2">
-                <div class="row menu2">
-                    <div class="col wrap-col">
-                        <ul id="wrapper">
-                            <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                                <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 
-                                1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
-                                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-                            </svg></a>
-                                <ul>
-                                    <li><a href="index.html">Accueil</a></li>
-                                    <li><a href="#">Galerie</a></li>
-                                    <li><a href="event.html">Evenements</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                </ul>
-                            </li>
+            <div class="row row-footer-2">
+                <div class="col footer">
+                    <div class="foot-page">
+                        <ul class="mention">
+                            <li><a href="#">Mentions légales</a></li>
+                            <span class="separator">|</span>
+                            <li><a href="#">Plan du site</a></li>
+                            <span class="separator">|</span>
+                            <li><a href="#">Presse</a></li>
+                            <span class="separator">|</span>
+                            <li><a href="#">Appels d'offres</a></li>
+                            <span class="separator">|</span>
+                            <li><a href="#">Actions</a></li>
+                            <span class="separator">|</span>
+                            <li><a href="#">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </footer>
-    </body>
+        </div>
+        <div class="container-fluid footer-2">
+            <div class="row menu2">
+                <div class="col wrap-col">
+                    <ul id="wrapper">
+                        <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                                <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 
+                                1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
+                                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                            </svg></a>
+                            <ul>
+                                <li><a href="index.html">Accueil</a></li>
+                                <li><a href="#">Galerie</a></li>
+                                <li><a href="event.html">Evenements</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
